[project]
name = "bongo-cat"
description = "You know the bongo cat steam game? Well here is a non-keylogger version made with python (i love python)"
readme = "README.md"
license = "MIT"
version = "1.0.5"
requires-python = ">=3.12,<3.14"
dependencies = [
  "pynput>=1.8.1",
  "pystray>=0.19.5",
  "pywin32>=310",
]

[project.urls]
Homepage = "https://github.com/NSPC911/bongo-cat"

[dependency-groups]
build = [
  "nuitka>=4.0.1",
  "zstandard>=0.25.0",
]
dev = [
  "poethepoet>=0.42.1",
  "ruff>=0.14.6",
]

[tool.uv]
compile-bytecode = true

[tool.ruff.lint]
select = [
  "ASYNC251",
  "COM819",
  "C400",
  "DOC",
  "D404",
  "E",
  "F",
  "I",
  "N801", "N802", "N805",
  "PLE1142",
  "Q",
  "SIM",
  "TD",
  "W",
]
ignore = ["W505", "E501", "ANN002", "ANN003", "TD002", "TD003"]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
preview = true

[tool.poe.executor]
type = "uv"
no-sync = true

[tool.poe.tasks]
[tool.poe.tasks.build]
help = "Build bongocat into an executable using Nuitka"
sequence = [
  { cmd = 'uv sync --group build' },
  { cmd = 'nuitka --mode=${mode} ./bongocat.py --enable-plugin=tk-inter --windows-console-mode=disable --windows-icon-from-ico=./idle.ico --lto=${lto} --assume-yes-for-downloads --enable-plugins=no-qt --onefile-cache-mode=cached --onefile-child-grace-time=0' },
]
args = [
  { name = "mode", help = "Build mode: onefile (default) or standalone", default = "standalone", positional = true, choices = ["standalone", "onefile"] },
  { name = "lto", help = "Enable LTO (link time optimization)", default = "yes", choices = ["yes", "no"], options = ["--lto"] },
]
